# mobility-course

./: .gitignore  setup.cfg
binder/: environment.yml
ci/: environment-dev.yml  environment.yml  environment_mini.yml  environment_mini_unix.yml  environment_mini_windows.yml  environment_unix.yml  environment_windows.yml
slides/Introduction-to-the-course/: index.html
slides/Introduction-to-the-course/css/: aalto_eng.css
source/: conf.py  index.rst  requirements.txt
source/course-info/: Introduction-to-the-course.md  License-terms.rst  attribution.rst  installing-miniconda.rst  introduction.rst  literature.rst
source/course-info/slides/: index.html
source/lessons/L1/: exercise-1.rst  giscience-and-sustainable-mobility.rst  git-basics.rst  intro-to-python-geostack.ipynb  readings-for-tomorrow.rst  spatial_network_analysis.ipynb
source/lessons/L2/: r5py_demo.ipynb
source/lessons/L3/: sustainable-mobility-analytics.rst
source/lessons/fa/: final-assignment.rst  final_assignment.ipynb
templates/: aalto-black.md  aalto-eng.md  aalto-white.md  black_main_template.md  heading-black-template.md  slide-heading-black.md  slide-two-box-big-left.md  slide_main_black.md  text-font-size.md  two-box-big-left-lower-style.md  two-box-big-left-style.md
