[metadata]
name = Spatial Data Science for Sustainable Mobility
version = 2024
license = MIT
description = A special course: Spatial Data Science for Sustainable Mobility.
author = Henrikki Tenkanen
author_email = henrikki.tenkanen@aalto.fi
url = http://sumogis.readthedocs.io/
classifiers =
	Development Status :: 2 -
	Environment :: Web Environment
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.12

[options]
packages = find:
include_package_data = True
zip_safe = False

[tool:release]
github_owner = htenkanen
github_repo = mobility-course